# back-end-s-test-task

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
api/v1/: exceptions.py  urls.py
api/v1/endpoints/categories/: __init__.py  detail.py  list.py
api/v1/endpoints/products/: __init__.py  detail.py  list.py
api/v1/endpoints/stats/: statistics.py
api/v1/filters/: product.py
api/v1/serializers/: category.py  feed.py  product.py
main/: translation.py
main/admin/: __init__.py  attributes.py  categories.py  core.py  feeds.py  inlines.py  products.py
main/migrations/: 0001_initial.py  0002_remove_product_product_description_idx_and_more.py
main/models/: __init__.py  base.py
main/models/attributes/: __init__.py  attribute.py  attribute_value.py  unit.py
main/models/core/: __init__.py  commission.py
main/models/store/: __init__.py  category.py  category_attribute_config.py  feed.py  product.py
parser/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
services/feed/: exceptions.py  feed_downloader.py
services/feed/core/: manager.py
services/feed/parser/: base.py  rozetka.py  types.py
services/product/: attribute_matcher.py  category_matcher.py
tasks/: __init__.py  image_processing.py  tasks.py
tests/: test_category_matcher.py  test_image_processing.py  test_models.py  test_parser.py  test_views.py
